Fixed middle finger cursor alignment, got thrown off from resize

--- a/killstreak/src/styles/scss/Shop/Products.scss
+++ b/killstreak/src/styles/scss/Shop/Products.scss
@@ -27,7 +27,7 @@
         transition: 0.25s;
 
         &:hover {
-          cursor: url("../../../images/icons/middle-finger.png") 16 16, default !important;
+          cursor: url("../../../images/icons/middle-finger.png") 5 5, default !important;
           filter: grayscale(100%);
         }
       }
